# TP2_infonuagique

./: CMakeLists.txt  IMCClientClass.cpp  IMCClientClass.h  README.md  main.cpp  pom.xml
proto/: IMC.grpc.pb.cc  IMC.grpc.pb.h  IMC.pb.cc  IMC.pb.h  IMC.proto  test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
src/main/java/: Client.java  GrpcServer.java  HelloResponse.java  HelloResponseOrBuilder.java  HelloWorld.java  HelloWorldOrBuilder.java  Main.java  ServeurApps.java  Test.java  TestHelloWorld.java  TestHelloWorldOrBuilder.java  TestHelloWorldServiceGrpc.java  test.proto
src/main/proto/: IMC.proto  test.proto
src/main/resources/archetype-resources/: pom.xml
